--- a/VirtualMarlinFirmware/App.xaml
+++ b/VirtualMarlinFirmware/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="VirtualMarlinFirmware.App"
+﻿<Application x:Class="VirtualRepRapFirmware.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:VirtualMarlinFirmware"
+             xmlns:local="clr-namespace:VirtualRepRapFirmware"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
